--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,12 @@
 body {
     background-image: url("logos.gif");
     color: yellow;
-    font-size: 25px;
     font-family: 'Audiowide', cursive;
     text-align: center;
 }
 
 h1 {
+    font-size: 65px;
     color: yellow;
     text-decoration: underline;
     text-shadow: 2px 2px 5px red;
@@ -16,16 +16,17 @@ h1 {
     letter-spacing: 0.2em;
 }
 .question {
-    font-size: 30px;
+    font-size: 45px;
     margin-bottom:10px;
+    color: yellow;
+    text-align: center;
 }
 
 .answers { 
-    font-size: 25px;
+    font-size: 35px;
     color: goldenrod;
     margin-bottom: 20px;
-    text-align: left;
-    display: inline-block;
+    text-align: center;
 }
 
 .answers label {
@@ -33,15 +34,15 @@ h1 {
     margin-bottom: 10px;
 }
 
-button {
-    font-size: 20px;
+.buttons {
+    font-size: 25px;
     background-color: yellow;
     color: black;
-    border: 0px;
     border-radius: 3px;
     padding: 10px;
     cursor: pointer;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 button:hover {
@@ -64,7 +65,13 @@ button:hover {
 .quiz-container {
     position: relative;
     height: 300px;
-    margin-top: 40px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
+#countdown {
+    font-size: 30px;
+    color: red;
+    text-align: center;
+}
   
